force-app/main/default/objects/dw_syteline_lu_work_center__x/dw_syteline_lu_work_center__x.object-meta.xml
<CustomObject>
    <description>dw_syteline$lu_work_center</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$lu_work_center</externalName>
    <label>dw_syteline$lu_work_center</label>
    <pluralLabel>dw_syteline$lu_work_center</pluralLabel>
</CustomObject>