force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/bflush_type__c.field-meta.xml
<CustomField>
    <fullName>bflush_type__c</fullName>
    <description>bflush_type</description>
    <externalDeveloperName>bflush_type</externalDeveloperName>
    <label>bflush_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>