force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/calendar_id__c.field-meta.xml
<CustomField>
    <fullName>calendar_id__c</fullName>
    <description>calendar_id</description>
    <externalDeveloperName>calendar_id</externalDeveloperName>
    <label>calendar_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>