force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/cntrl_point__c.field-meta.xml
<CustomField>
    <fullName>cntrl_point__c</fullName>
    <description>cntrl_point</description>
    <externalDeveloperName>cntrl_point</externalDeveloperName>
    <label>cntrl_point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>