force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/dept_id__c.field-meta.xml
<CustomField>
    <fullName>dept_id__c</fullName>
    <description>dept_id</description>
    <externalDeveloperName>dept_id</externalDeveloperName>
    <label>dept_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>