force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/efficiency__c.field-meta.xml
<CustomField>
    <fullName>efficiency__c</fullName>
    <description>efficiency</description>
    <externalDeveloperName>efficiency</externalDeveloperName>
    <label>efficiency</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>