force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/fmco_acct_id__c.field-meta.xml
<CustomField>
    <fullName>fmco_acct_id__c</fullName>
    <description>fmco_acct_id</description>
    <externalDeveloperName>fmco_acct_id</externalDeveloperName>
    <label>fmco_acct_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>