force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/outside_ind__c.field-meta.xml
<CustomField>
    <fullName>outside_ind__c</fullName>
    <description>outside_ind</description>
    <externalDeveloperName>outside_ind</externalDeveloperName>
    <label>outside_ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>