force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/overhead_cd__c.field-meta.xml
<CustomField>
    <fullName>overhead_cd__c</fullName>
    <description>overhead_cd</description>
    <externalDeveloperName>overhead_cd</externalDeveloperName>
    <label>overhead_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>