force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/run_hrs_t_mch__c.field-meta.xml
<CustomField>
    <fullName>run_hrs_t_mch__c</fullName>
    <description>run_hrs_t_mch</description>
    <externalDeveloperName>run_hrs_t_mch</externalDeveloperName>
    <label>run_hrs_t_mch</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>