force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/run_rate_a_lbr__c.field-meta.xml
<CustomField>
    <fullName>run_rate_a_lbr__c</fullName>
    <description>run_rate_a_lbr</description>
    <externalDeveloperName>run_rate_a_lbr</externalDeveloperName>
    <label>run_rate_a_lbr</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>