force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/sched_drv__c.field-meta.xml
<CustomField>
    <fullName>sched_drv__c</fullName>
    <description>sched_drv</description>
    <externalDeveloperName>sched_drv</externalDeveloperName>
    <label>sched_drv</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>