force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/setup_hrs_t__c.field-meta.xml
<CustomField>
    <fullName>setup_hrs_t__c</fullName>
    <description>setup_hrs_t</description>
    <externalDeveloperName>setup_hrs_t</externalDeveloperName>
    <label>setup_hrs_t</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>