force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/setup_rate__c.field-meta.xml
<CustomField>
    <fullName>setup_rate__c</fullName>
    <description>setup_rate</description>
    <externalDeveloperName>setup_rate</externalDeveloperName>
    <label>setup_rate</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>