force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/setup_rate_a__c.field-meta.xml
<CustomField>
    <fullName>setup_rate_a__c</fullName>
    <description>setup_rate_a</description>
    <externalDeveloperName>setup_rate_a</externalDeveloperName>
    <label>setup_rate_a</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>