force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/uf_backflush_loc_id__c.field-meta.xml
<CustomField>
    <fullName>uf_backflush_loc_id__c</fullName>
    <description>uf_backflush_loc_id</description>
    <externalDeveloperName>uf_backflush_loc_id</externalDeveloperName>
    <label>uf_backflush_loc_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>