force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/vmco_acct_id__c.field-meta.xml
<CustomField>
    <fullName>vmco_acct_id__c</fullName>
    <description>vmco_acct_id</description>
    <externalDeveloperName>vmco_acct_id</externalDeveloperName>
    <label>vmco_acct_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>