force-app/main/default/objects/dw_syteline_lu_work_center__x/fields/work_center_desc__c.field-meta.xml
<CustomField>
    <fullName>work_center_desc__c</fullName>
    <description>work_center_desc</description>
    <externalDeveloperName>work_center_desc</externalDeveloperName>
    <label>work_center_desc</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>